--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <Title>{{ site.name }}: {{ page.title }}</title>
         <meta name="viewport" content="width=device-width,
 				       initial-scale=1.0">
-	<link href="http://irenezhang.net/“ rel="canonical">
+	<link href="http://irenezhang.net/" rel="canonical">
         <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.base }}/css/group.css" rel="stylesheet">
         <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
@@ -20,8 +20,10 @@
     <body>
         <div class="container">
           <div class="header">
-            <div class="myname clearfix">Irene Y. Zhang</div>
-            <ul class="nav nav-pills nav-justified">
+            <div class="title clearfix">Irene Y. Zhang</div>
+	    <div class="subtitle clearfix">Ph. D. student - Computer Science &
+	    Engineering - University of Washington</div>
+	    <ul class="nav nav-pills nav-justified">
               {% assign shorturl = page.url | replace:'index.html','' %}
               {% for item in site.navigation %}
                 <li {% if item.link == shorturl %}class="active"{% endif %}>
@@ -30,14 +32,36 @@
               {% endfor %}
             </ul>
           </div>
-          {% comment %}Liquid is sort of terrible! I think "!= true" is the
-          only way to do negation?{% endcomment %}
-          {% if page.notitle != true %}
-          <h2>{{ page.title }}</h2>
-          {% endif %}
+	  <div class="row">
+	    <div class="col-md-3 col-sm-4 col-xs-12 pull-left">
+	      <img src="{{ site.base }}/img/irene-new.JPG" alt="Photo of me"
+		   class="img-circle img-responsive">
+	      <div class="info-header">
+		Contact</div>
+	      <div class="info">
+		<ul class="fa-ul">
+		  <li><i class="fa-li fa fa-envelope"></i>iyzhang@uw.edu</li>
+		  <li><i class="fa-li fa fa-location-arrow"></i>185 Stevens Way
+		    Seattle, WA 98195</li>
+		  <li><i class="fa-li fa fa-building">
+		      <a href="https://www.cs.washington.edu/contact/"></i>Allen
+		    Center</a> Room 591</li>
+		  <li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+		</ul>
+	      </div>
+	    </div>
 
-          {{ content }}
-
+	    <div class="col-md-9 col-sm-8 col-xs-12">
+              {% comment %}Liquid is sort of terrible! I think "!= true" is the
+              only way to do negation?{% endcomment %}
+              {% if page.notitle != true %}
+              <h3>{{ page.title }}</h3>
+              {% endif %}
+	      
+              {{ content }}
+	    </div>
+	  </div>
+	  
           <div class="footer">
             <p>
               <a href="http://www.cs.washington.edu/">Computer Science &amp;
@@ -47,7 +71,7 @@
                 Washington</a>
             </p>
           </div>
-
+	  </li>
         </div> <!-- /container -->
           
         <!-- Support retina images. -->
