--- a/css/group.css
+++ b/css/group.css
@@ -7,7 +7,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Quattrocento', Georgia, Times, serif;
-    font-weight:400;
+    font-weight:700;
+    color:#999;
 }
 
 a {
@@ -18,7 +19,7 @@ a {
 p, div {
     font-family: 'Raleway', Helvetica, Arial, sans-serif;
     font-weight:400;
-    color:#444;
+    color:#444;    
 }
 
 /* Customize first page */
@@ -34,7 +35,7 @@ p, div {
 
 .subtitle {
     font-weight:400;
-    font-family: 'Raleway', Georgia, Times, serif;
+    font-family: 'Raleway', Helvetica, Arial, sans-serif;
     color:#554D7D;
     text-align:center;
     letter-spacing:1px;
@@ -68,8 +69,8 @@ p, div {
 }
 
 .info-header {
-    border-top: 1px solid #554D7D;  
-    border-bottom: 1px solid #554D7D;  
+    border-top: 1px solid #554D7D;
+    border-bottom: 1px solid #554D7D;
     text-transform: uppercase;
     text-align:center;
     margin-bottom:10px;
@@ -88,20 +89,20 @@ p, div {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     /* increase header size and padding */
-      .title {
-      font-size:5em;
-      letter-spacing:5px;
-      margin-bottom:-15px;
-  }
-  .subtitle {
-      margin-bottom:20px;
-  }
-  .img-responsive {
-      margin-top:20px;
-      margin-bottom:20px;
-      padding:0px;
-  }      
-
+    .title {
+	font-size:5em;
+	letter-spacing:5px;
+	margin-bottom:-15px;
+    }
+    .subtitle {
+	font-size:16px;
+	margin-bottom:20px;
+    }
+    .img-responsive {
+	margin-top:20px;
+	margin-bottom:20px;
+	padding:0px;
+    }      
 }
 
 /* Customize container */
@@ -134,7 +135,7 @@ p, div {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #888;
 }
 
 .nav {
@@ -160,15 +161,13 @@ p, div {
 }
 
 /* Front page news. */
-ul.news .date {
+.date {
     color: #999;
     font-weight: bold;
     display: block;
 }
-ul.news > li {
-    margin-top: .5em;
-}
-ul.news .shortnews .date {
-    float: left;
-    margin-right: 1em;
+
+.media-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
 }
