updating header for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <div class="header">
           <div class="title clearfix">Irene Y. Zhang</div>
 	  <p>Ph. D. student - Computer Science &
-	    Engineering - University of Washington</p>
+	    Engineering<span class="hidden-xs"> -</span> University of Washington</p>
 	  <ul class="nav nav-pills nav-justified">
             {% assign shorturl = page.url | replace:'index.html','' %}
             {% for item in site.navigation %}
