updating coloring of header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="header">
           <div class="title clearfix">Irene Y. Zhang</div>
-	  <p>Ph. D. student - Computer Science &
+	  <p class="subtitle">Ph. D. student - Computer Science &
 	    Engineering<span class="hidden-xs"> -</span> University of Washington</p>
 	  <ul class="nav nav-pills nav-justified">
             {% assign shorturl = page.url | replace:'index.html','' %}
