updating bootstrap and post about consistency

--- a/css/group.css
+++ b/css/group.css
@@ -132,17 +132,17 @@ p, div {
   margin: 30px 0;
 }
 
-.table > thead > tr > th,
-.table > tbody > tr > th,
-.table > tfoot > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > td,
-.table > tfoot > tr > td {
-  padding: 8px;
-  line-height: 1.42857143;
-  vertical-align: top;
-  border-top: 1px solid #ddd;
-}
+/* .table > thead > tr > th, */
+/* .table > tbody > tr > th, */
+/* .table > tfoot > tr > th, */
+/* .table > thead > tr > td, */
+/* .table > tbody > tr > td, */
+/* .table > tfoot > tr > td { */
+/*   padding: 8px; */
+/*   line-height: 1.42857143; */
+/*   vertical-align: top; */
+/*   border-top: 1px solid #ddd; */
+/* } */
 
 .nav {
   list-style: none;
