--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,6 +4,35 @@
 		<td>
 			<span class="date">
 				
+				<big><strong>2016</strong></big><br />
+				March
+                        
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+			    <b>When Is Operation Ordering Required in Replicated Transactional Storage?.</b>
+			</span><br />
+			<span class="authors">
+				Irene Zhang, Naveen Kr. Sharma, Adriana Szekeres, Dan R. K. Ports, and Arvind Krishnamurthy.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">IEEE Data Engineering Bulletin</span>.
+			<br />
+			<span class="links btn-group">
+				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_zhang16:_when_is_operat_order_requir').slideToggle('fast');return false;">
+                <i class="fa fa-chevron-down"></i> abstract</a>
+				<a class="btn btn-default btn-xs" href="papers/ordering-data.pdf">
+                <i class="fa fa-download"></i> pdf</a>
+			</span>
+			<div id="abstract_zhang16:_when_is_operat_order_requir" class="abstract well">
+			Today&#39;s replicated transactional storage systems typically have a layered architecture, combining protocols for transaction coordination, consistent replication, and concurrency control. These systems generally require costly strongly-consistent replication protocols like Paxos, which assign a total order to all operations. To avoid this cost, we ask whether all replicated operations in these systems need to be strictly ordered. Recent research has yielded replication protocols that can avoid unnecessary ordering, e.g., by exploiting commutative operations, but it is not clear how to apply these to replicated transaction processing systems. We answer this question by analyzing existing transaction processing designs in terms of which replicated operations require ordering and which simply require fault tolerance. We describe how this analysis leads to our recent work on TAPIR, a transaction protocol that efficiently provides strict serializability by using a new replication protocol that provides fault tolerance but not ordering for most operations.
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
 				<big><strong>2015</strong></big><br />
 				October
                         
