--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -5,7 +5,83 @@
 			<span class="date">
 				
 				<big><strong>2016</strong></big><br />
-				March
+				November
+                        
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+			    <b>Automating Data Management for Wide-area, Reactive Applications.</b>
+			</span><br />
+			<span class="authors">
+				Irene Zhang, Niel Lebeck, Pedro Fonseca, Brandon Holt, Raymond Cheng, Ariadna Norberg, Arvind Krishnamurthy, and Henry M. Levy.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Proceedings of the USENIX Symposium on Operating Systems Design and Implementation (OSDI)</span>.
+			<br />
+			<span class="links btn-group">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+                
+                October
+                
+                        
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+			    <b>Disciplined Inconsistency.</b>
+			</span><br />
+			<span class="authors">
+				Brandon Holt, James Bornholt, Irene Zhang, Dan R. K. Ports, Mark Oskin, and Luis Ceze.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Proceedings of the ACM Symposium on Cloud Computing (SoCC)</span>.
+			<br />
+			<span class="links btn-group">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+                
+                June
+                
+                        
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+			    <b>Disciplined Inconsistency.</b>
+			</span><br />
+			<span class="authors">
+				Brandon Holt, James Bornholt, Irene Zhang, Dan R. K. Ports, Mark Oskin, and Luis Ceze.
+			</span><br />
+			<span class="venuetype">Technical Report </span><span class="venue">UW-CSE-16-06-01, University of Washington CSE</span>.
+			<br />
+			<span class="links btn-group">
+				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_ipa-tech-report').slideToggle('fast');return false;">
+                <i class="fa fa-chevron-down"></i> abstract</a>
+				<a class="btn btn-default btn-xs" href="papers/ipa-tr.pdf">
+                <i class="fa fa-download"></i> pdf</a>
+			</span>
+			<div id="abstract_ipa-tech-report" class="abstract well">
+			Distributed applications and web services, such as online stores or social networks, are expected to be scalable, available, responsive, and fault-tolerant. To meet these steep requirements in the face of high round-trip latencies, network partitions, server failures, and load spikes, applications use eventually consistent datastores that allow them to weaken the consistency of some data. However, making this transition is highly error-prone because relaxed consistency models are notoriously difficult to understand and test. In this work, we propose a new programming model for distributed data that makes consistency properties explicit and uses a type system to enforce consistency safety. With the Inconsistent, Performance-bound, Approximate (IPA) storage system, programmers specify performance targets and correctness requirements as constraints on persistent data structures and handle uncertainty about the result of datastore reads using new consistency types. We implement a prototype of this model in Scala on top of an existing datastore, Cassandra, and use it to make performance/correctness tradeoffs in two applications: a ticket sales service and a Twitter clone. Our evaluation shows that IPA prevents consistency-based programming errors and adapts consistency automatically in response to changing network conditions, performing comparably to weak consistency and 2-10x faster than strong consistency.
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+                
+                March
+                
                         
 			</span>
 		</td>
@@ -78,12 +154,12 @@
 			<span class="venuetype">Technical Report </span><span class="venue">UW-CSE-2014-12-01 v2, University of Washington CSE</span>.
 			<br />
 			<span class="links btn-group">
-				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_zhang15:_build_consis_trans_incon_replic_exten_version').slideToggle('fast');return false;">
+				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_zhang15-build_consis_trans_incon_replic_exten_version').slideToggle('fast');return false;">
                 <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/tapir-tr-v2.pdf">
                 <i class="fa fa-download"></i> pdf</a>
 			</span>
-			<div id="abstract_zhang15:_build_consis_trans_incon_replic_exten_version" class="abstract well">
+			<div id="abstract_zhang15-build_consis_trans_incon_replic_exten_version" class="abstract well">
 			Application programmers increasingly prefer distributed storage systems with strong consistency and distributed transactions (e.g., Google&#39;s Spanner) for their strong guarantees and ease of use. Unfortunately, existing transactional storage systems are expensive to use -- in part because they require costly replication protocols, like Paxos, for fault tolerance. In this paper, we present a new approach that makes transactional storage systems more affordable: we eliminate consistency from the replication protocol while still providing distributed transactions with strong consistency to applications. &lt;p&gt; We present TAPIR -- the Transactional Application Protocol for Inconsistent Replication -- the first transaction protocol to use a novel replication protocol, called inconsistent replication, that provides fault tolerance without consistency. By enforcing strong consistency only in the transaction protocol, TAPIR can commit transactions in a single round-trip and order distributed transactions without centralized coordination. We demonstrate the use of TAPIR in a transactional key-value store, TAPIR-KV. Compared to conventional systems, TAPIR-KV provides better latency and throughput.
 			</div>
 		</td>
@@ -108,7 +184,14 @@
 			<span class="venuetype"></span><span class="venue">Proceedings of the Workshop on Principles and Practice of Consistency for Distributed Data (PaPoC)</span>.
 			<br />
 			<span class="links btn-group">
+				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_holt15-claret').slideToggle('fast');return false;">
+                <i class="fa fa-chevron-down"></i> abstract</a>
+				<a class="btn btn-default btn-xs" href="papers/claret-papoc15.pdf">
+                <i class="fa fa-download"></i> pdf</a>
 			</span>
+			<div id="abstract_holt15-claret" class="abstract well">
+			Out of the many NoSQL databases in use today, some that provide simple data structures for records, such as Redis and MongoDB, are now becoming popular. Building applications out of these complex data types provides a way to communicate intent to the database system without sacrificing flexibility or committing to a fixed schema. Currently this capability is leveraged in limited ways, such as to ensure related values are co-located, or for atomic updates. There are many ways data types can be used to make databases more efficient that are not yet being exploited. We explore several ways of leveraging abstract data type (ADT) semantics in databases, focusing primarily on commutativity. Using a Twitter clone as a case study, we show that using commutativity can reduce transaction abort rates for high-contention, update-heavy workloads that arise in real social networks. We conclude that ADTs are a good abstraction for database records, providing a safe and expressive programming model with ample opportunities for optimization, making databases more safe and scalable.
+			</div>
 		</td>
 	</tr>
 	<tr>
