--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 	    <link href="http://irenezhang.net/" rel="canonical">
         <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.base }}/css/group.css" rel="stylesheet">
-        <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
-        <!--     href="{{ site.baseurl }}/blog/blog.xml"> -->
+        <link rel="alternate" type="application/atom+xml" title="Atom"
+            href="{{ site.baseurl }}/blog/blog.xml">
         <link href='//fonts.googleapis.com/css?family=Quattrocento:400,700'
               rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,900'
