adding video links to papers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,10 @@
             href="{{ site.baseurl }}/blog/blog.xml">
         <link href='//fonts.googleapis.com/css?family=Quattrocento:400,700'
               rel='stylesheet' type='text/css'>
-        <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,900'
+        <link href='//fonts.googleapis.com/css?family=Quattrocento+Sans:400,500,700'
         rel='stylesheet' type='text/css'>
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400"
+              rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- Piwik -->
