--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -24,6 +24,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/diamond-osdi16.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://github.com/UWSysLab/diamond">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_zhang-diamond" class="abstract well">
 			  Users of today&#39;s popular wide-area apps (e.g., Twitter, Google Docs, and Words with Friends) must no longer save and reload when updating shared data; instead, these applications are reactive, providing the illusion of continuous synchronization across mobile devices and the cloud. Achieving this illusion poses a complex distributed data management problem for programmers. This paper presents the first reactive data management service, called Diamond, which provides persistent cloud storage, reliable synchronization between storage and mobile devices, and automated execution of application code in response to shared data updates. We demonstrate that Diamond greatly simplifies the design of reactive applications, strengthens distributed data sharing guarantees, and supports automated reactivity with low performance overhead.
@@ -55,6 +57,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/ipa-socc16.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://github.com/bholt/ipa">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_ipa-socc16" class="abstract well">
 			  Distributed applications and web services, such as online stores or social networks, are expected to be scalable, available, responsive, and fault-tolerant. To meet these steep requirements in the face of high round-trip latencies, network partitions, server failures, and load spikes, applications use eventually consistent datastores that allow them to weaken the consistency of some data. However, making this transition is highly error-prone because relaxed consistency models are notoriously difficult to understand and test. In this work, we propose a new programming model for distributed data that makes consistency properties explicit and uses a type system to enforce consistency safety. With the Inconsistent, Performance-bound, Approximate (IPA) storage system, programmers specify performance targets and correctness requirements as constraints on persistent data structures and handle uncertainty about the result of datastore reads using new consistency types. We implement a prototype of this model in Scala on top of an existing datastore, Cassandra, and use it to make performance/correctness tradeoffs in two applications: a ticket sales service and a Twitter clone. Our evaluation shows that IPA prevents consistency-based programming errors and adapts consistency automatically in response to changing network conditions, performing comparably to weak consistency and 2-10x faster than strong consistency.
@@ -116,6 +120,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/arrakis-tocs16.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="http://arrakis.cs.washington.edu/?page_id=52">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_peter16-arrak" class="abstract well">
 			  Recent device hardware trends enable a new approach to the design of network server operating systems. In a traditional operating system, the kernel mediates access to device hardware by server applications to enforce process isolation as well as network and disk security. We have designed and implemented a new operating system, Arrakis, that splits the traditional role of the kernel in two. Applications have direct access to virtualized I/O devices, allowing most I/O operations to skip the kernel entirely, while the kernel is re-engineered to provide network and disk protection without kernel mediation of every operation. We describe the hardware and software changes needed to take advantage of this new abstraction, and we illustrate its power by showing improvements of 2 to 5x in latency and 9x throughput for a popular persistent NoSQL store relative to a well-tuned Linux implementation.
@@ -147,6 +153,10 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/tapir-sosp15.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://www.youtube.com/watch?v=yE3eMxYJDiE">
+                                  <i class="fa fa-film"></i> talk</a>
+				<a class="btn btn-default btn-xs" href="https://github.com/UWSysLab/tapir">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_zhang14-build_consis_trans_incon_replic" class="abstract well">
 			  Application programmers increasingly prefer distributed storage systems with distributed transactions and strong consistency (e.g., Google&#39;s Spanner) for their strong guarantees and ease of use. Unfortunately, existing transactional storage systems are expensive to use because they rely on expensive replication protocols like Paxos for fault-tolerance. In this paper, we take a new approach to make transactional storage systems more affordable; we eliminate consistency from the replication protocol, while still providing distributed transactions with strong consistency to applications. This paper presents TAPIR -- the Transaction Application Protocol for Inconsistent Replication -- the first transaction protocol to use a replication protocol, inconsistent replication, that provides fault-tolerance with no consistency. By enforcing strong consistency only in the transaction protocol, TAPIR is able to commit transactions in a single round-trip and schedule distributed transactions with no centralized coordination. We demonstrate the use of TAPIR in TAPIR-KV, a key-value store that provides high-performance transactional storage. Compared to system using conventional transaction protocols that require replication with strong consistency, TAPIR-KV has 2x better latency and throughput.
@@ -178,6 +188,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/tapir-tr-v2.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://github.com/UWSysLab/tapir">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_zhang15-build_consis_trans_incon_replic_exten_version" class="abstract well">
 			  Application programmers increasingly prefer distributed storage systems with strong consistency and distributed transactions (e.g., Google&#39;s Spanner) for their strong guarantees and ease of use. Unfortunately, existing transactional storage systems are expensive to use -- in part because they require costly replication protocols, like Paxos, for fault tolerance. In this paper, we present a new approach that makes transactional storage systems more affordable: we eliminate consistency from the replication protocol while still providing distributed transactions with strong consistency to applications. &lt;p&gt; We present TAPIR -- the Transactional Application Protocol for Inconsistent Replication -- the first transaction protocol to use a novel replication protocol, called inconsistent replication, that provides fault tolerance without consistency. By enforcing strong consistency only in the transaction protocol, TAPIR can commit transactions in a single round-trip and order distributed transactions without centralized coordination. We demonstrate the use of TAPIR in a transactional key-value store, TAPIR-KV. Compared to conventional systems, TAPIR-KV provides better latency and throughput.
@@ -239,6 +251,10 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/sapphire-osdi14.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rackcdn.com/osdi14/zhang.mp4">
+                                  <i class="fa fa-film"></i> talk</a>
+				<a class="btn btn-default btn-xs" href="https://github.com/UWSysLab/Sapphire">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_zhang14-custom_exten_deploy_mobil_cloud_applic" class="abstract well">
 			  Modern applications face new challenges in managing today&#39;s highly distributed and heterogeneous environment. For example, they must stitch together code that crosses smartphones, tablets, personal devices, and cloud services, connected by variable wide-area networks, such as WiFi and 4G. This paper describes Sapphire, a distributed programming platform that simplifies the programming of today&#39;s mobile/cloud applications. Sapphire&#39;s key design feature is its distributed runtime system, which supports a flexible and extensible deployment layer for solving complex distributed systems tasks, such as fault-tolerance, code-offloading, and caching. Rather than writing distributed systems code, programmers choose deployment managers that extend Sapphire&#39;s kernel to meet their applications&#39; deployment requirements. In this way, each application runs on an underlying platform that is customized for its own distribution needs.
@@ -271,6 +287,10 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/arrakis-osdi14.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rackcdn.com/osdi14/peter.mp4">
+                                  <i class="fa fa-film"></i> talk</a>
+				<a class="btn btn-default btn-xs" href="http://arrakis.cs.washington.edu/?page_id=52">
+                                  <i class="fa fa-code"></i> code</a>
 			</span>
 			<div id="abstract_peter14-arrak-osdi14" class="abstract well">
 			  Recent device hardware trends enable a new approach to the design of network server operating systems. In a traditional operating system, the kernel mediates access to device hardware by server applications, to enforce process isolation as well as network and disk security. We have designed and implemented a new operating system, Arrakis, that splits the traditional role of the kernel in two. Applications have direct access to virtualized I/O devices, allowing most I/O operations to skip the kernel entirely, while the kernel is re-engineered to provide network and disk protection without kernel mediation of every operation. We describe the hardware and software changes needed to take advantage of this new abstraction, and we illustrate its power by showing 2-5x end-to-end latency and 9x throughput improvements for a popular persistent NoSQL store relative to a well-tuned Linux implementation.
@@ -332,6 +352,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/vmrestore-atc13.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rackcdn.com/atc13/zhang.mp4">
+                                  <i class="fa fa-film"></i> talk</a>
 			</span>
 			<div id="abstract_irene13-optim_vm_check_restor_perfor_vmwar_esxi" class="abstract well">
 			  Cloud providers are increasingly looking to use virtual machine checkpointing for new applications beyond fault tolerance. Existing checkpointing systems designed for fault tolerance only optimize for saving checkpointed state, so they cannot support these new applications, which require efficient restore. Improving restore performance requires a predictive technique to reduce the number of disk accesses to bring in the VM&#39;s memory on restore. However, complex VM workloads can diverge at any time due to external inputs, background processes and timing variances, so predicting which pages the VM will access on restore to reduce faults to disk is impossible. Instead, we focus on a technique for predicting which pages the VM will access together on restore to improve the efficiency of disk accesses. To reduce the number of faults to disk on restore, we group memory pages likely to be accessed together into locality blocks. On each fault, we can load a block of pages that are likely to be accessed with the faulting page, eliminating future faults and increasing disk efficiency. We implement support for locality blocks, along with several other optimizations, in a new checkpointing system for VMware ESXi Server called Halite. Our experiments show that Halite reduces restore overhead by up to 94\% even for complex VM workloads.
@@ -392,6 +414,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/txcache-osdi10.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://www.usenix.org/legacy/events/osdi10/stream/ports/index.html">
+                                  <i class="fa fa-film"></i> talk</a>
 			</span>
 			<div id="abstract_ports10-trans_consis_autom_manag_applic_data_cache" class="abstract well">
 			  Distributed in-memory application data caches like memcached are a popular solution for scaling database-driven web sites. These systems are easy to add to existing deployments, and increase performance significantly by reducing load on both the database and application servers. Unfortunately, such caches do not integrate well with the database or the application. They cannot maintain transactional consistency across the entire system, violating the isolation properties of the underlying database. They leave the application responsible for locating data in the cache and keeping it up to date, a frequent source of application complexity and programming errors. Addressing both of these problems, we introduce a transactional cache, TxCache, with a simple programming model. TxCache ensures that any data seen within a transaction, whether it comes from the cache or the database, reflects a slightly stale but consistent snapshot of the database. TxCache makes it easy to add caching to an application by simply designating functions as cacheable; it automatically caches their results, and invalidates the cached data as the underlying database changes. Our experiments found that adding TxCache increased the throughput of a web application by up to 5.2x, only slightly less than a non-transactional cache, showing that consistency does not have to come at the price of performance.
@@ -453,6 +477,8 @@
                                   <i class="fa fa-chevron-down"></i> abstract</a>
 				<a class="btn btn-default btn-xs" href="papers/wfs-nsdi09.pdf">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
+				<a class="btn btn-default btn-xs" href="https://www.usenix.org/conference/nsdi-09/flexible-wide-area-storage-distributed-systems-wheelfs">
+                                  <i class="fa fa-film"></i> talk</a>
 			</span>
 			<div id="abstract_stribling09-flexib_wide_area_storag_distr_system_wheel" class="abstract well">
 			  WheelFS is a wide-area distributed storage system intended to help multi-site applications share data and gain fault tolerance. WheelFS takes the form of a distributed file system with a familiar POSIX interface. Its design allows applications to adjust the tradeoff between prompt visibility of updates from other sites and the ability for sites to operate independently despite failures and long delays. WheelFS allows these adjustments via semantic cues, which provide application control over consistency, failure handling, and file and replica placement. WheelFS is implemented as a user-level file system and is deployed on PlanetLab and Emulab. Three applications (a distributed Web cache, an email service and large file distribution) demonstrate that WheelFS&#39;s file system interface simplifies construction of distributed applications by allowing reuse of existing software. These applications would perform poorly with the strict semantics implied by a traditional file system interface, but by providing cues to WheelFS they are able to achieve good performance. Measurements show that applications built on WheelFS deliver comparable performance to services such as CoralCDN and BitTorrent that use specialized wide-area storage systems.
