--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -44,6 +44,16 @@
 				<a class="btn btn-default btn-xs" href="{{ url|escape }}">
                                   <i class="fa fa-file-pdf-o"></i> pdf</a>
                                 {%- endif %}
+			        {%- set talk = entry.fields['talk'] %}
+                                {%- if talk %}
+				<a class="btn btn-default btn-xs" href="{{ talk|escape }}">
+                                  <i class="fa fa-film"></i> talk</a>
+                                {%- endif %}
+                                {%- set code = entry.fields['code'] %}
+                                {%- if code %}
+				<a class="btn btn-default btn-xs" href="{{ code|escape }}">
+                                  <i class="fa fa-code"></i> code</a>
+                                {%- endif %}
 			        {%- for type, url in (entry|extra_urls).iteritems() %}
 				<a class="btn btn-default btn-xs" href="{{ url|escape }}">
                                   <i class="fa fa-chevron-right"></i> {{ type|escape }}</a>
